// file: proto/gcommon/v1/common/messages/list_permissions_request.proto
// version: 1.0.0
// guid: b28e318d-b0e8-41bb-9c90-d6b98f138e4f

edition = "2023";

package gcommon.v1.common;

import "gcommon/v1/common/enums/subject_type.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/common";

message ListPermissionsRequest {
  // User or role ID to list permissions for
  string subject_id = 1;

  // Subject type

  AuthSubjectType subject_type = 2;

  // Pagination
  int32 page_size = 3;
  string page_token = 4;
}
